--- a/css/jquery.blurbGallery.css
+++ b/css/jquery.blurbGallery.css
@@ -84,16 +84,17 @@
 /* =Info
 ----------------------------------------------- */
 .bg-info{
-	border-top: 1px solid #CCC;
 	float: left;
 	margin: 0 0 0 20px;
-	padding: 20px 0 0 0;
+	padding: 0;
 	width: 300px;
 }
 .bg-title{
+	border-top: 1px solid #CCC;
 	color: #454545;
 	font-size: 18px;
 	font-weight: bold;
+	padding: 20px 0 0 0;
 }
 .bg-category{
 	color: #797979;
@@ -102,6 +103,7 @@
 }
 .bg-description{
 	margin: 10px 0 0 0;
+	padding: 0 0 20px 0;
 }
 .bg-description p{
 	margin: 10px 0 0 0;
@@ -123,8 +125,6 @@
 .bg-thumbs{
 	border-top: 1px solid #CCC;
 	display: table;
-	float: left;
-	margin: 20px 0 0 0;
 	padding: 20px 0 0 0;
 	-moz-user-select: none;
 	-khtml-user-select: none;
@@ -154,8 +154,7 @@
 ----------------------------------------------- */
 .bg-page-navigation{
 	border-top: 1px solid #CCC;
-	float: left;
-	margin: 10px 0 20px 0;
+	margin: 10px 0 10px 0;
 	padding: 10px 0 0 0;
 	text-align: right;
 	width: 300px;
@@ -197,13 +196,11 @@
 	.bg-info{
 		float: none;
 		margin: 0 auto;
-		padding: 20px 0 0 0;
 		width: 80%;
 	}
 	.bg-thumbs{
 		float: none;
-		margin: 20px auto 0 auto;
-		padding: 20px 0 0 0;	
+		margin: 0 auto;
 		width: 100%;
 	}
 	.bg-thumbs a{
@@ -237,13 +234,11 @@
 	.bg-info{
 		float: none;
 		margin: 0 auto;
-		padding: 20px 0 0 0;
 		width: 90%;
 	}
 	.bg-thumbs{
 		float: none;
-		margin: 20px auto 0 auto;
-		padding: 20px 0 0 0;	
+		margin: 0 auto;
 		width: 100%;
 	}
 	.bg-thumbs a{
